--- a/TyunStackDemos/Base.lproj/Main.storyboard
+++ b/TyunStackDemos/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="DGI-L6-Gbl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="SOs-IB-SZT">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -96,6 +97,73 @@
             </objects>
             <point key="canvasLocation" x="1292" y="-717.39130434782612"/>
         </scene>
+        <!--View Controller1-->
+        <scene sceneID="2aS-Q7-knM">
+            <objects>
+                <viewController storyboardIdentifier="ViewController1" id="2Wq-zG-nBx" customClass="ViewController1" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G7Y-BT-TGs"/>
+                        <viewControllerLayoutGuide type="bottom" id="Slf-5N-njR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Qz6-kB-zIG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h4J-zk-EVo">
+                                <rect key="frame" x="50" y="144" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="onBtnClick:" destination="2Wq-zG-nBx" eventType="touchUpInside" id="1Qf-4L-owW"/>
+                                </connections>
+                            </button>
+                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RU7-Pu-VOj" customClass="GestureView">
+                                <rect key="frame" x="34" y="224" width="240" height="128"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="34m-nd-33c"/>
+                                    <constraint firstAttribute="width" constant="240" id="6Hu-gv-mIa"/>
+                                </constraints>
+                            </view>
+                            <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fLX-CQ-5eN" customClass="GestureView">
+                                <rect key="frame" x="84" y="274" width="240" height="128"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="aLu-Ql-sP3"/>
+                                    <constraint firstAttribute="height" constant="128" id="f49-RO-J7d"/>
+                                </constraints>
+                            </view>
+                            <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7ae-Y2-jAd" customClass="GestureView">
+                                <rect key="frame" x="161" y="194" width="198" height="128"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="58V-b4-HWQ"/>
+                                    <constraint firstAttribute="width" constant="198" id="gCs-rS-jBn"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="h4J-zk-EVo" firstAttribute="top" secondItem="G7Y-BT-TGs" secondAttribute="bottom" constant="100" id="83Q-2f-aZS"/>
+                            <constraint firstItem="RU7-Pu-VOj" firstAttribute="top" secondItem="h4J-zk-EVo" secondAttribute="bottom" constant="50" id="9z3-3R-uZ3"/>
+                            <constraint firstItem="h4J-zk-EVo" firstAttribute="leading" secondItem="Qz6-kB-zIG" secondAttribute="leading" constant="50" id="Dr7-A7-6Mq"/>
+                            <constraint firstItem="fLX-CQ-5eN" firstAttribute="top" secondItem="RU7-Pu-VOj" secondAttribute="top" constant="50" id="Hk9-P5-z69"/>
+                            <constraint firstItem="7ae-Y2-jAd" firstAttribute="leading" secondItem="RU7-Pu-VOj" secondAttribute="trailing" constant="-113" id="LWP-8Q-ump"/>
+                            <constraint firstItem="7ae-Y2-jAd" firstAttribute="top" secondItem="RU7-Pu-VOj" secondAttribute="top" constant="-30" id="Mj0-zW-cBt"/>
+                            <constraint firstItem="fLX-CQ-5eN" firstAttribute="leading" secondItem="RU7-Pu-VOj" secondAttribute="leading" constant="50" id="lDw-ZM-muY"/>
+                            <constraint firstItem="RU7-Pu-VOj" firstAttribute="leading" secondItem="Qz6-kB-zIG" secondAttribute="leadingMargin" constant="18" id="n1e-tA-Quy"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Dig-CJ-oTx"/>
+                    <connections>
+                        <outlet property="greenView" destination="RU7-Pu-VOj" id="pHe-Wt-9gF"/>
+                        <outlet property="orangeView" destination="7ae-Y2-jAd" id="DAI-I7-6Y8"/>
+                        <outlet property="yellowView" destination="fLX-CQ-5eN" id="Cuq-tE-Dlc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ggx-jY-6mR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3239.1999999999998" y="-734.48275862068976"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -133,7 +201,7 @@
                                             <segue destination="f8e-2b-bwg" kind="push" id="Iti-ib-kvq"/>
                                         </connections>
                                     </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x8A-sa-pv6">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x8A-sa-pv6" customClass="GestureView">
                                         <rect key="frame" x="67.5" y="152" width="240" height="128"/>
                                         <color key="backgroundColor" red="0.039215686270000001" green="0.71372549019999998" blue="0.56078431370000004" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -323,5 +391,37 @@
             </objects>
             <point key="canvasLocation" x="3240.8000000000002" y="-77.811094452773617"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="aHM-q8-hTw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SOs-IB-SZT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8l9-ep-MLZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2Wq-zG-nBx" kind="relationship" relationship="rootViewController" id="zeG-3j-LJQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h5b-PP-S46" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2300" y="-734.48275862068976"/>
+        </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
